--- a/Master/Master.bib
+++ b/Master/Master.bib
@@ -11,15 +11,14 @@ publisher = {Blackwell},
 address = {New York}
 }
 
-@article{Kaufman:2004er,
-author = {Kaufman, Jason},
-title = {{Endogenous Explanation in the Sociology of Culture}},
-journal = {Annual Review of Sociology},
-year = {2004},
-volume = {30},
-number = {1},
-pages = {335--357},
-month = aug
+@article{Healy:2000ev,
+author = {Healy, Kieran},
+title = {{Embedded Altruism: Blood Collection Regimes and the European Union's Donor Population}},
+journal = {American Journal of Sociology},
+year = {2000},
+volume = {105},
+number = {6},
+pages = {1633--1657}
 }
 
 @article{Vaisey:2008hn,
@@ -50,6 +49,15 @@ year = {1990},
 pages = {44--62}
 }
 
+@article{Peterson:1979vn,
+author = {Peterson, R.A.},
+title = {{Revitalizing the culture concept}},
+journal = {Annual Review of Sociology},
+year = {1979},
+volume = {5},
+pages = {137--166}
+}
+
 @book{Fine:2012uo,
 author = {Fine, Gary Alan},
 title = {{Tiny Publics}},
@@ -59,12 +67,13 @@ series = {A Theory of Group Action and Culture},
 month = mar
 }
 
-@book{Becker:2008wp,
-author = {Becker, Howard S},
-title = {{Art Worlds: 25th Anniversary edition, Updated and Expanded}},
-publisher = {University of California Press},
-year = {2008},
-edition = {2}
+@book{Wherry:2012wo,
+author = {Wherry, Frederick},
+title = {{The Culture of Markets}},
+publisher = {Polity},
+year = {2012},
+edition = {1},
+month = jan
 }
 
 @article{Binder:2008ez,
@@ -76,6 +85,22 @@ volume = {619},
 number = {1},
 pages = {6--14},
 month = sep
+}
+
+@book{Becker:2008wp,
+author = {Becker, Howard S},
+title = {{Art Worlds: 25th Anniversary edition, Updated and Expanded}},
+publisher = {University of California Press},
+year = {2008},
+edition = {2}
+}
+
+@book{Zelizer:2007wya,
+author = {Zelizer, Vivianna A},
+title = {{The Purchase of Intimacy}},
+publisher = {Princeton University Press},
+year = {2007},
+month = mar
 }
 
 @article{Mohr:1998wo,
@@ -126,6 +151,31 @@ year = {2010},
 address = {Atlanta, GA}
 }
 
+@incollection{Spillman:2011uz,
+author = {Spillman, Lyn},
+title = {{Culture and Economic Life}},
+booktitle = {Oxford Handbook of Sociology},
+year = {2011},
+editor = {Alexander, Jeffrey C. and Smith, Philip and Jacobs, Ron},
+publisher = {Oxford University Press, USA},
+address = {New York}
+}
+
+@unpublished{Healy:5_7Hpf9R,
+author = {Healy, Kieran},
+title = {{The Performativity of Networks}}
+}
+
+@article{Martin:2010bs,
+author = {Martin, John Levi},
+title = {{Life's a beach but you're an ant, and other unwelcome news for the sociology of culture}},
+journal = {Poetics},
+year = {2010},
+volume = {38},
+number = {2},
+pages = {229--244}
+}
+
 @book{Wherry:2008wb,
 author = {Wherry, Frederick},
 title = {{Global Markets and Local Crafts: Thailand and Costa Rica Compared (Themes in Global Social Change)}},
@@ -141,16 +191,6 @@ publisher = {Univ of California Press},
 year = {2003},
 series = {Class, Race, and Family Life},
 month = sep
-}
-
-@article{Martin:2010bs,
-author = {Martin, John Levi},
-title = {{Life's a beach but you're an ant, and other unwelcome news for the sociology of culture}},
-journal = {Poetics},
-year = {2010},
-volume = {38},
-number = {2},
-pages = {229--244}
 }
 
 @book{Bourdieu:1998ub,
@@ -172,6 +212,16 @@ pages = {35--61},
 publisher = {Univ of California Press}
 }
 
+@article{Healy:2004vm,
+author = {Healy, Kieran},
+title = {{Altruism as an organizational problem: The case of organ procurement}},
+journal = {American Sociological Review},
+year = {2004},
+volume = {69},
+number = {3},
+pages = {387}
+}
+
 @article{Lamont:2002uv,
 author = {Lamont, Mich{\`e}le and Molnar, V.},
 title = {{The study of boundaries in the social sciences}},
@@ -186,6 +236,16 @@ title = {{Reproduction in Education, Society and Culture (Theory, Culture {\&} S
 publisher = {Sage Publications},
 year = {1990},
 edition = {2nd}
+}
+
+@incollection{Zelizer:2005vk,
+author = {Zelizer, Vivianna A},
+title = {{Culture and Consumption}},
+booktitle = {The handbook of economic sociology},
+year = {2005},
+editor = {Smelser, Neil J. and Swedberg, Richard},
+publisher = {Princeton Univ Pr},
+address = {Princeton, NJ}
 }
 
 @incollection{Lizardo:2008wl,
@@ -216,6 +276,14 @@ title = {{Small groups and culture creation: The idioculture of little league ba
 journal = {American Sociological Review},
 year = {1979},
 pages = {733--745}
+}
+
+@book{Zelizer:1994ww,
+author = {Zelizer, Vivianna A},
+title = {{Pricing the Priceless Child: The Changing Social Value of Children}},
+publisher = {Princeton University Press},
+year = {1994},
+month = aug
 }
 
 @book{Bourdieu:1987uf,
@@ -301,6 +369,16 @@ number = {4},
 pages = {735--794}
 }
 
+@article{Granovetter:1992vf,
+author = {Granovetter, Mark},
+title = {{Economic institutions as social constructions: a framework for analysis}},
+journal = {Acta sociologica},
+year = {1992},
+volume = {35},
+number = {1},
+pages = {3}
+}
+
 @book{Armstrong:2002ta,
 author = {Armstrong, Elizabeth A},
 title = {{Forging Gay Identities: Organizing Sexuality in San Francisco, 1950-1994}},
@@ -333,6 +411,14 @@ publisher = {University of Chicago Press},
 year = {2003}
 }
 
+@article{DiMaggio:1998tt,
+author = {DiMaggio, Paul and Louch, H.},
+title = {{Socially embedded consumer transactions: for what kinds of purchases do people most often use networks?}},
+journal = {American Sociological Review},
+year = {1998},
+pages = {619--637}
+}
+
 @article{Johnston:2007bh,
 author = {Johnston, Josee and Baumann, Shyon},
 title = {{Democracy versus Distinction: A Study of Omnivorousness in Gourmet Food Writing}},
@@ -344,23 +430,11 @@ pages = {165--204},
 month = jul
 }
 
-@article{Griswold:1987vx,
-author = {Griswold, W.},
-title = {{The fabrication of meaning: Literary interpretation in the United States, Great Britain, and the West Indies}},
-journal = {AJS},
-year = {1987},
-pages = {1077--1117}
-}
-
-@article{Rossman:2010kw,
-author = {Rossman, G and Esparza, N and Bonacich, P},
-title = {{I'd Like to Thank the Academy, Team Spillovers, and Network Centrality}},
-journal = {American Sociological Review},
-year = {2010},
-volume = {75},
-number = {1},
-pages = {31--51},
-month = mar
+@book{Zelizer:1983vt,
+author = {Zelizer, Vivianna A},
+title = {{Morals and markets: the development of life insurance in the United States}},
+publisher = {Transaction Publishers},
+year = {1983}
 }
 
 @article{Hays:1994un,
@@ -372,11 +446,12 @@ volume = {12},
 pages = {57--57}
 }
 
-@book{Geertz:1973ws,
-author = {Geertz, Clifford},
-title = {{The interpretation of cultures : selected essays}},
-publisher = {Basic Books},
-year = {1973}
+@article{Griswold:1987vx,
+author = {Griswold, W.},
+title = {{The fabrication of meaning: Literary interpretation in the United States, Great Britain, and the West Indies}},
+journal = {AJS},
+year = {1987},
+pages = {1077--1117}
 }
 
 @article{Lamont:2009vt,
@@ -408,6 +483,17 @@ pages = {331--351},
 month = dec
 }
 
+@article{Rossman:2010kw,
+author = {Rossman, G and Esparza, N and Bonacich, P},
+title = {{I'd Like to Thank the Academy, Team Spillovers, and Network Centrality}},
+journal = {American Sociological Review},
+year = {2010},
+volume = {75},
+number = {1},
+pages = {31--51},
+month = mar
+}
+
 @book{Hochschild:1983ty,
 author = {Hochschild, AR},
 title = {{The managed heart: Commercialism of human feeling}},
@@ -422,12 +508,14 @@ journal = {The Dialectic of Enlightenment},
 year = {1979}
 }
 
-@book{Bandelj:2011uca,
-author = {Bandelj, Nina and Wherry, Frederick},
-title = {{The Cultural Wealth of Nations}},
-publisher = {Stanford Univ Pr},
-year = {2011},
-month = jul
+@article{Spillman:1999un,
+author = {Spillman, Lyn},
+title = {{Enriching exchange: Cultural dimensions of markets}},
+journal = {American Journal of Economics and Sociology},
+year = {1999},
+volume = {58},
+number = {4},
+pages = {1047--1071}
 }
 
 @article{Childress:2012io,
@@ -448,6 +536,25 @@ publisher = {Oxford University Press},
 year = {2005}
 }
 
+@book{Zelizer:2010uta,
+author = {Zelizer, Vivianna A},
+title = {{Economic Lives: How Culture Shapes the Economy}},
+publisher = {Princeton University Press},
+year = {2010},
+month = sep
+}
+
+@article{Fourcade:2007jh,
+author = {Fourcade, Marion and Healy, Kieran},
+title = {{Moral Views of Market Society}},
+journal = {Annual Review of Sociology},
+year = {2007},
+volume = {33},
+number = {1},
+pages = {285--311},
+month = aug
+}
+
 @article{Swidler:1986vf,
 author = {Swidler, Ann},
 title = {{Culture in action: Symbols and strategies}},
@@ -456,11 +563,33 @@ year = {1986},
 pages = {273--286}
 }
 
+@book{Bandelj:2011uca,
+author = {Bandelj, Nina and Wherry, Frederick},
+title = {{The Cultural Wealth of Nations}},
+publisher = {Stanford Univ Pr},
+year = {2011},
+month = jul
+}
+
+@book{Geertz:1973ws,
+author = {Geertz, Clifford},
+title = {{The interpretation of cultures : selected essays}},
+publisher = {Basic Books},
+year = {1973}
+}
+
 @book{Joas:1996vh,
 author = {Joas, Hans},
 title = {{The Creativity of Action, trans}},
 publisher = {J. Gaines and P. Keast. Cambridge: Polity},
 year = {1996}
+}
+
+@article{Bourdieu:2000wo,
+author = {Bourdieu, Pierre},
+title = {{Making the economic habitus}},
+journal = {Ethnography},
+year = {2000}
 }
 
 @article{Lizardo:2010vd,
@@ -524,6 +653,14 @@ year = {2007},
 volume = {72},
 number = {4},
 pages = {487--511}
+}
+
+@book{Zelizer:1997vha,
+author = {Zelizer, Vivianna A},
+title = {{The Social Meaning of Money: Pin Money, Paychecks, Poor Relief, and Other Currencies}},
+publisher = {Princeton University Press},
+year = {1997},
+month = aug
 }
 
 @article{Cheyne:2010kc,
@@ -608,12 +745,14 @@ year = {1993},
 pages = {753--767}
 }
 
-@article{Peterson:1979vn,
-author = {Peterson, R.A.},
-title = {{Revitalizing the culture concept}},
+@article{Kaufman:2004er,
+author = {Kaufman, Jason},
+title = {{Endogenous Explanation in the Sociology of Culture}},
 journal = {Annual Review of Sociology},
-year = {1979},
-volume = {5},
-pages = {137--166}
+year = {2004},
+volume = {30},
+number = {1},
+pages = {335--357},
+month = aug
 }
 
