fix for Cognition files - added all on last commit

--- a/Cognition/Cognition.bib
+++ b/Cognition/Cognition.bib
@@ -1,146 +1,6 @@
 %% Created using Papers on Wed, 25 Jul 2012.
 %% http://mekentosj.com/papers/
 
-@article{Granovetter:1992vf,
-author = {Granovetter, Mark},
-title = {{Economic institutions as social constructions: a framework for analysis}},
-journal = {Acta sociologica},
-year = {1992},
-volume = {35},
-number = {1},
-pages = {3}
-}
-
-@book{Swidler:2003wu,
-author = {Swidler, Ann},
-title = {{Talk of love: How culture matters}},
-publisher = {University of Chicago Press},
-year = {2003}
-}
-
-@book{Zelizer:1983vt,
-author = {Zelizer, Vivianna A},
-title = {{Morals and markets: the development of life insurance in the United States}},
-publisher = {Transaction Publishers},
-year = {1983}
-}
-
-@booklet{Khan:2011tt,
-title = {{Privilege: The Making of an Adolescent Elite at St. Paul's School}},
-author = {Khan, Shamus Rahman},
-howpublished = {Princeton},
-year = {2011}
-}
-
-@inproceedings{Shepherd:2011bg,
-author = {Shepherd, Hana},
-title = {{The Cultural Context of Cognition: What the Implicit Association Test Tells Us About How Culture Works}},
-booktitle = {Sociological Forum},
-year = {2011},
-pages = {121--143},
-organization = {Wiley Online Library}
-}
-
-@book{Zelizer:2010uta,
-author = {Zelizer, Vivianna A},
-title = {{Economic Lives: How Culture Shapes the Economy}},
-publisher = {Princeton University Press},
-year = {2010},
-month = sep
-}
-
-@article{Lizardo:2006vj,
-author = {Lizardo, Omar},
-title = {{How cultural tastes shape personal networks}},
-journal = {American Sociological Review},
-year = {2006},
-volume = {71},
-number = {5},
-pages = {778}
-}
-
-@article{Childress:2012io,
-author = {Childress, C C and Friedkin, N E},
-title = {{Cultural Reception and Production: The Social Construction of Meaning in Book Clubs}},
-journal = {American Sociological Review},
-year = {2012},
-volume = {77},
-number = {1},
-pages = {45--68},
-month = jan
-}
-
-@book{Bourdieu:1990wo,
-author = {Bourdieu, Pierre and Passeron, Jean-Claude},
-title = {{Reproduction in Education, Society and Culture (Theory, Culture {\&} Society)}},
-publisher = {Sage Publications},
-year = {1990},
-edition = {2nd}
-}
-
-@book{Bourdieu:1990vh,
-author = {Bourdieu, Pierre and Nice, Richard},
-title = {{The logic of practice}},
-publisher = {Stanford University Press},
-year = {1990},
-address = {Stanford, Calif}
-}
-
-@article{Fourcade:2007jh,
-author = {Fourcade, Marion and Healy, Kieran},
-title = {{Moral Views of Market Society}},
-journal = {Annual Review of Sociology},
-year = {2007},
-volume = {33},
-number = {1},
-pages = {285--311},
-month = aug
-}
-
-@article{Spillman:1999un,
-author = {Spillman, Lyn},
-title = {{Enriching exchange: Cultural dimensions of markets}},
-journal = {American Journal of Economics and Sociology},
-year = {1999},
-volume = {58},
-number = {4},
-pages = {1047--1071}
-}
-
-@book{Grindstaff:2002uh,
-author = {Grindstaff, Laura},
-title = {{The Money Shot}},
-publisher = {University Of Chicago Press},
-year = {2002},
-series = {Trash, Class, and the Making of TV Talk Shows},
-month = jul
-}
-
-@book{Smith:2005wo,
-author = {Smith, Christian and Denton, Melinda L.},
-title = {{Soul searching: The religious and spiritual lives of American teenagers}},
-publisher = {Oxford University Press},
-year = {2005}
-}
-
-@article{Swidler:1986vf,
-author = {Swidler, Ann},
-title = {{Culture in action: Symbols and strategies}},
-journal = {American Sociological Review},
-year = {1986},
-pages = {273--286}
-}
-
-@article{Cerulo:2010es,
-author = {Cerulo, Karen A.},
-title = {{Mining the intersections of cognitive sociology and neuroscience}},
-journal = {Poetics},
-year = {2010},
-volume = {38},
-number = {2},
-pages = {115--132}
-}
-
 @article{Farrell:2011cr,
 author = {Farrell, Justin},
 title = {{Environmental Activism and Moral Schemas: Cultural Components of Differential Participation}},
@@ -148,161 +8,12 @@ journal = {Environment and Behavior},
 year = {2011}
 }
 
-@book{Joas:1996vh,
-author = {Joas, Hans},
-title = {{The Creativity of Action, trans}},
-publisher = {J. Gaines and P. Keast. Cambridge: Polity},
-year = {1996}
-}
-
-@article{Liddle:2002vu,
-author = {Dowd, T and Liddle, K. and Lupo, K. and Borden, A.},
-title = {{Organizing the musical canon: the repertoires of major US symphony orchestras, 1842 to 1969}},
-journal = {Poetics},
-year = {2002},
-volume = {30},
-number = {1},
-pages = {35--61}
-}
-
-@article{Lizardo:2010vd,
-author = {Lizardo, Omar and Strand, Michael},
-title = {{Skills, toolkits, contexts and institutions: Clarifying the relationship between different approaches to cognition in cultural sociology}},
-journal = {Poetics},
-year = {2010},
-volume = {38},
-number = {2},
-pages = {205--228}
-}
-
-@article{McDonnell:2010vk,
-author = {McDonnell, Terrence E.},
-title = {{Cultural objects as objects: Materiality, urban space, and the interpretation of AIDS campaigns in Accra, Ghana}},
-journal = {American Journal of Sociology},
-year = {2010},
-volume = {115},
-number = {6},
-pages = {1800--1852}
-}
-
-@article{Ignatow:2010uk,
-author = {Ignatow, Gabriel},
-title = {{Culture and Embodied Cognition: Moral Discourses in Internet Support Groups for Overeaters}},
-journal = {Social Forces},
-year = {2010},
-volume = {88},
-number = {2},
-pages = {643--669}
-}
-
-@article{RahmanKhan:2012jj,
-author = {Rahman Khan, Shamus},
-title = {{The Sociology of Elites}},
-journal = {Annual Review of Sociology},
-year = {2012},
-volume = {38},
-number = {1},
-pages = {361--377},
-month = aug
-}
-
-@book{Bourdieu:1987uf,
+@book{Bourdieu:1998vp,
 author = {Bourdieu, Pierre},
-title = {{Distinction: A Social Critique of the Judgement of Taste}},
-publisher = {Harvard University Press},
-year = {1987},
-edition = {Copyright 1984},
-month = oct
-}
-
-@book{Geertz:1973ws,
-author = {Geertz, Clifford},
-title = {{The interpretation of cultures : selected essays}},
-publisher = {Basic Books},
-year = {1973}
-}
-
-@article{DiMaggio:1997vv,
-author = {DiMaggio, Paul},
-title = {{Culture and cognition}},
-journal = {Annual Review of Sociology},
-year = {1997},
-pages = {263--287}
-}
-
-@article{Bourdieu:2000wo,
-author = {Bourdieu, Pierre},
-title = {{Making the economic habitus}},
-journal = {Ethnography},
-year = {2000}
-}
-
-@book{Lamont:2009tq,
-author = {Lamont, Mich{\`e}le},
-title = {{How Professors Think: Inside the Curious World of Academic Judgment}},
-publisher = {Harvard University Press},
-year = {2009}
-}
-
-@book{Armstrong:2002ta,
-author = {Armstrong, Elizabeth A},
-title = {{Forging Gay Identities: Organizing Sexuality in San Francisco, 1950-1994}},
-publisher = {University Of Chicago Press},
-year = {2002}
-}
-
-@techreport{Zeruvabel:1997tg,
-author = {Zeruvabel, Evitar},
-title = {{Social Mindscapes: An Invitation to Cognitive Sociology}},
-year = {1997}
-}
-
-@article{Davies:1981wl,
-author = {Davies, M. and Kandel, D.B.},
-title = {{Parental and peer influences on adolescents' educational plans: Some further evidence}},
-journal = {AJS},
-year = {1981},
-pages = {363--387}
-}
-
-@article{Parsons:1938wg,
-author = {Parsons, Talcott},
-title = {{The role of ideas in social action}},
-journal = {American Sociological Review},
-year = {1938},
-volume = {3},
-number = {5},
-pages = {652--664}
-}
-
-@article{Kaufman:2004er,
-author = {Kaufman, Jason},
-title = {{Endogenous Explanation in the Sociology of Culture}},
-journal = {Annual Review of Sociology},
-year = {2004},
-volume = {30},
-number = {1},
-pages = {335--357},
-month = aug
-}
-
-@incollection{Spillman:2007uba,
-author = {Spillman, Lyn},
-title = {{Culture}},
-booktitle = {The Blackwell Encyclopedia of Sociology},
-year = {2007},
-editor = {Ritzer, George},
-publisher = {Blackwell},
-address = {New York}
-}
-
-@inproceedings{Swidler:2008fy,
-author = {Swidler, Ann},
-title = {{Comment on Stephen Vaiseys Socrates, Skinner, and Aristotle: Three Ways of Thinking About Culture in Action}},
-booktitle = {Sociological Forum},
-year = {2008},
-pages = {614--618},
-organization = {Wiley Online Library}
+title = {{Practical reason}},
+publisher = {Stanford Univ Pr},
+year = {1998},
+series = {on the theory of action}
 }
 
 @article{Lizardo:2011fn,
@@ -315,59 +26,31 @@ number = {1},
 pages = {25}
 }
 
-@inproceedings{Vaisey:2008jp,
-author = {Vaisey, Stephen},
-title = {{Reply to Ann Swidler}},
+@article{Ignatow:2010uk,
+author = {Ignatow, Gabriel},
+title = {{Culture and Embodied Cognition: Moral Discourses in Internet Support Groups for Overeaters}},
+journal = {Social Forces},
+year = {2010},
+volume = {88},
+number = {2},
+pages = {643--669}
+}
+
+@inproceedings{Shepherd:2011bg,
+author = {Shepherd, Hana},
+title = {{The Cultural Context of Cognition: What the Implicit Association Test Tells Us About How Culture Works}},
 booktitle = {Sociological Forum},
-year = {2008},
-pages = {619--622},
+year = {2011},
+pages = {121--143},
 organization = {Wiley Online Library}
 }
 
-@book{Hochschild:1983ty,
-author = {Hochschild, AR},
-title = {{The managed heart: Commercialism of human feeling}},
-publisher = {University of California Press},
-year = {1983}
-}
-
-@article{Emirbayer:2004jy,
-author = {Emirbayer, M},
-title = {{The Alexander School of Cultural Sociology}},
-journal = {Thesis Eleven},
-year = {2004},
-volume = {79},
-number = {1},
-pages = {5--15},
-month = nov
-}
-
-@article{Binder:1993uz,
-author = {Binder, Amy J},
-title = {{Constructing racial rhetoric: Media depictions of harm in heavy metal and rap music}},
-journal = {American Sociological Review},
-year = {1993},
-pages = {753--767}
-}
-
-@article{Healy:2000ev,
-author = {Healy, Kieran},
-title = {{Embedded Altruism: Blood Collection Regimes and the European Union's Donor Population}},
-journal = {American Journal of Sociology},
+@book{Bourdieu:2000uf,
+author = {Bourdieu, Pierre},
+title = {{Pascalian meditations}},
+publisher = {Stanford Univ Pr},
 year = {2000},
-volume = {105},
-number = {6},
-pages = {1633--1657}
-}
-
-@article{Fligstein:2001wr,
-author = {Fligstein, Neil},
-title = {{Social skill and the theory of fields}},
-journal = {Sociological Theory},
-year = {2001},
-volume = {19},
-number = {2},
-pages = {105--125}
+month = feb
 }
 
 @inproceedings{FromContradictiont:2010uf,
@@ -378,157 +61,28 @@ year = {2010},
 address = {Atlanta, GA}
 }
 
-@article{DiMaggio:1998tt,
-author = {DiMaggio, Paul and Louch, H.},
-title = {{Socially embedded consumer transactions: for what kinds of purchases do people most often use networks?}},
-journal = {American Sociological Review},
-year = {1998},
-pages = {619--637}
-}
-
-@article{Vaisey:2008hn,
-author = {Vaisey, Stephen},
-title = {{Socrates, Skinner, and Aristotle: Three Ways of Thinking About Culture in Action1}},
-journal = {Sociological Forum},
-year = {2008},
-volume = {23},
-number = {3},
-pages = {603--613}
-}
-
-@book{Wherry:2008wb,
-author = {Wherry, Frederick},
-title = {{Global Markets and Local Crafts: Thailand and Costa Rica Compared (Themes in Global Social Change)}},
-publisher = {The Johns Hopkins University Press},
-year = {2008},
-month = jan
-}
-
-@article{Horkheimer:1979ug,
-author = {Horkheimer, M. and Adorno, T.},
-title = {{The culture industry as mass deception}},
-journal = {The Dialectic of Enlightenment},
-year = {1979}
-}
-
-@incollection{SewellJr:1999uz,
-author = {Sewell Jr, William H.},
-title = {{Concepts of Culture}},
-booktitle = {Beyond the Cultural Turn: New Directions in the Study of Society and Culture},
-year = {1999},
-editor = {Bonnell, Victoria E and Hunt, Lynn Avery and Biernacki, Richard},
-pages = {35--61},
-publisher = {Univ of California Press}
-}
-
-@article{Vaisey:2010tj,
-author = {Vaisey, Stephen and Lizardo, Omar},
-title = {{Can Cultural Worldviews Influence Network Composition?}},
-journal = {Social Forces},
-year = {2010},
-volume = {88},
-number = {4},
-pages = {1595--1618}
-}
-
-@article{Mohr:1998wo,
-author = {Mohr, John W},
-title = {{Measuring meaning structures}},
+@article{DiMaggio:1997vv,
+author = {DiMaggio, Paul},
+title = {{Culture and cognition}},
 journal = {Annual Review of Sociology},
-year = {1998},
-volume = {24},
-pages = {345--370}
-}
-
-@book{Bourdieu:1998vp,
-author = {Bourdieu, Pierre},
-title = {{Practical reason}},
-publisher = {Stanford Univ Pr},
-year = {1998},
-series = {on the theory of action}
-}
-
-@book{Zelizer:1994ww,
-author = {Zelizer, Vivianna A},
-title = {{Pricing the Priceless Child: The Changing Social Value of Children}},
-publisher = {Princeton University Press},
-year = {1994},
-month = aug
-}
-
-@article{Cheyne:2010kc,
-author = {Cheyne, Andrew and Binder, Amy J},
-title = {{Cosmopolitan preferences: The constitutive role of place in American elite taste for hip-hop music 1991{\^a}€``2005}},
-journal = {Poetics},
-year = {2010},
-volume = {38},
-number = {3},
-pages = {336--364},
-month = jun
-}
-
-@article{Goodwin:2000uu,
-author = {Goodwin, J. and Jasper, J.M. and Polletta, F.},
-title = {{The return of the repressed: The fall and rise of emotions in social movement theory}},
-journal = {Mobilization: An International Quarterly},
-year = {2000},
-volume = {5},
-number = {1},
-pages = {65--83}
-}
-
-@article{Lamont:2002uv,
-author = {Lamont, Mich{\`e}le and Molnar, V.},
-title = {{The study of boundaries in the social sciences}},
-journal = {Annual Review of Sociology},
-year = {2002},
-pages = {167--195}
-}
-
-@article{Alon:2007ty,
-author = {Alon, S. and Tienda, M.},
-title = {{Diversity, opportunity, and the shifting meritocracy in higher education}},
-journal = {American Sociological Review},
-year = {2007},
-volume = {72},
-number = {4},
-pages = {487--511}
-}
-
-@book{Zelizer:1997vha,
-author = {Zelizer, Vivianna A},
-title = {{The Social Meaning of Money: Pin Money, Paychecks, Poor Relief, and Other Currencies}},
-publisher = {Princeton University Press},
 year = {1997},
-month = aug
+pages = {263--287}
 }
 
-@book{Reed:2011vp,
-author = {Reed, Isaac Ariail},
-title = {{Interpretation and Social Knowledge: On the Use of Theory in the Human Sciences}},
-publisher = {University Of Chicago Press},
-year = {2011},
-series = {On the Use of Theory in the Human Sciences},
-month = sep
+@book{Bourdieu:1990vh,
+author = {Bourdieu, Pierre and Nice, Richard},
+title = {{The logic of practice}},
+publisher = {Stanford University Press},
+year = {1990},
+address = {Stanford, Calif}
 }
 
-@article{Peterson:1979vn,
-author = {Peterson, R.A.},
-title = {{Revitalizing the culture concept}},
-journal = {Annual Review of Sociology},
-year = {1979},
-volume = {5},
-pages = {137--166}
-}
-
-@article{Schudson:1989td,
-author = {Schudson, Michael},
-title = {{How culture works: perspectives from media studies on the efficacy of symbols}},
-journal = {Theory and society},
-year = {1989},
-volume = {18},
-number = {2},
-pages = {153--180}
+@article{Vaisey:2012uw,
+author = {Vaisey, Stephen and Frye, Margaret},
+title = {{The Old One-Two: Preserving Analytical Dualism is Psychological Sociology}},
+journal = {Theory \{\&} Psychology},
+year = {2012},
+pages = {forthcoming}
 }
 
 @article{Lizardo:2004ug,
@@ -541,146 +95,6 @@ number = {4},
 pages = {375--401}
 }
 
-@book{Bandelj:2011uca,
-author = {Bandelj, Nina and Wherry, Frederick},
-title = {{The Cultural Wealth of Nations}},
-publisher = {Stanford Univ Pr},
-year = {2011},
-month = jul
-}
-
-@article{Hays:1994un,
-author = {Hays, S.},
-title = {{Structure and agency and the sticky problem of culture}},
-journal = {Sociological Theory},
-year = {1994},
-volume = {12},
-pages = {57--57}
-}
-
-@article{SewellJr:1992tq,
-author = {Sewell Jr, William H.},
-title = {{A theory of structure: Duality, agency, and transformation}},
-journal = {American Journal of Sociology},
-year = {1992},
-volume = {98},
-number = {1},
-pages = {1--29}
-}
-
-@book{Liebes:1993wt,
-author = {Liebes, Tamar and Katz, Elihu},
-title = {{The Export of Meaning}},
-publisher = {Polity},
-year = {1993},
-series = {Cross-Cultural Readings of Dallas}
-}
-
-@book{Radway:1991tw,
-author = {Radway, Janice A},
-title = {{Reading the Romance: Women, Patriarchy, and Popular Literature}},
-publisher = {University of North Carolina Press},
-year = {1991},
-edition = {2nd},
-month = nov
-}
-
-@book{Zelizer:2007wya,
-author = {Zelizer, Vivianna A},
-title = {{The Purchase of Intimacy}},
-publisher = {Princeton University Press},
-year = {2007},
-month = mar
-}
-
-@article{Binder:2008ez,
-author = {Binder, Amy J and Blair-Loy, Mary and Evans, John and Ng, Kwai and Schudson, Michael},
-title = {{Introduction: The Diversity of Culture}},
-journal = {The ANNALS of the American Academy of Political and Social Science},
-year = {2008},
-volume = {619},
-number = {1},
-pages = {6--14},
-month = sep
-}
-
-@article{Lamont:2009vt,
-author = {Lamont, Mich{\`e}le},
-title = {{Looking back at Bourdieu}},
-year = {2009},
-pages = {1--19},
-month = jun
-}
-
-@article{Pachucki:2007dl,
-author = {Pachucki, Mark and Pendergrass, Sabrina and Lamont, Mich{\`e}le},
-title = {{Boundary processes: Recent theoretical developments and new contributions}},
-journal = {Poetics},
-year = {2007},
-volume = {35},
-number = {6},
-pages = {331--351},
-month = dec
-}
-
-@book{Bourdieu:1998ub,
-author = {Bourdieu, Pierre and Wacquant, Lo{\"\i}c},
-title = {{The State Nobility: Elite Schools in the Field of Power}},
-publisher = {Stanford University Press},
-year = {1998},
-edition = {First Edition},
-month = feb
-}
-
-@book{Bourdieu:2000uf,
-author = {Bourdieu, Pierre},
-title = {{Pascalian meditations}},
-publisher = {Stanford Univ Pr},
-year = {2000},
-month = feb
-}
-
-@incollection{Spillman:2011uz,
-author = {Spillman, Lyn},
-title = {{Culture and Economic Life}},
-booktitle = {Oxford Handbook of Sociology},
-year = {2011},
-editor = {Alexander, Jeffrey C. and Smith, Philip and Jacobs, Ron},
-publisher = {Oxford University Press, USA},
-address = {New York}
-}
-
-@unpublished{Healy:5_7Hpf9R,
-author = {Healy, Kieran},
-title = {{The Performativity of Networks}}
-}
-
-@article{Martin:2010bs,
-author = {Martin, John Levi},
-title = {{Life's a beach but you're an ant, and other unwelcome news for the sociology of culture}},
-journal = {Poetics},
-year = {2010},
-volume = {38},
-number = {2},
-pages = {229--244}
-}
-
-@book{Rossman:2012wk,
-author = {Rossman, Gabriel},
-title = {{Climbing the Charts: What Radio Airplay Tells Us about the Diffusion of Innovation}},
-publisher = {Princeton University Press},
-year = {2012},
-month = jul
-}
-
-@book{BlairLoy:2005wo,
-author = {Blair-Loy, Mary},
-title = {{Competing Devotions: Career and Family among Women Executives}},
-publisher = {Harvard University Press},
-year = {2005},
-month = nov
-}
-
 @article{Dalton:2004ty,
 author = {Dalton, B.},
 title = {{Creativity, habit, and the social products of creative action: Revising Joas, incorporating Bourdieu}},
@@ -689,51 +103,6 @@ year = {2004},
 volume = {22},
 number = {4},
 pages = {603--622}
-}
-
-@article{Healy:2004vm,
-author = {Healy, Kieran},
-title = {{Altruism as an organizational problem: The case of organ procurement}},
-journal = {American Sociological Review},
-year = {2004},
-volume = {69},
-number = {3},
-pages = {387}
-}
-
-@article{Fine:1979wk,
-author = {Fine, Gary A},
-title = {{Small groups and culture creation: The idioculture of little league baseball teams}},
-journal = {American Sociological Review},
-year = {1979},
-pages = {733--745}
-}
-
-@article{Martin:1998uv,
-author = {Martin, K.A.},
-title = {{Becoming a gendered body: Practices of preschools}},
-journal = {American Sociological Review},
-year = {1998},
-pages = {494--511}
-}
-
-@book{Fine:2012uo,
-author = {Fine, Gary Alan},
-title = {{Tiny Publics}},
-publisher = {Russell Sage Foundation Publications},
-year = {2012},
-series = {A Theory of Group Action and Culture},
-month = mar
-}
-
-@incollection{Zelizer:2005vk,
-author = {Zelizer, Vivianna A},
-title = {{Culture and Consumption}},
-booktitle = {The handbook of economic sociology},
-year = {2005},
-editor = {Smelser, Neil J. and Swedberg, Richard},
-publisher = {Princeton Univ Pr},
-address = {Princeton, NJ}
 }
 
 @article{Vaisey:2009ug,
@@ -747,116 +116,29 @@ pages = {1675--1715},
 month = may
 }
 
-@article{Beisel:1990ve,
-author = {Beisel, N.},
-title = {{Class, culture, and campaigns against vice in three American cities, 1872-1892}},
-journal = {American Sociological Review},
-year = {1990},
-pages = {44--62}
+@techreport{Zeruvabel:1997tg,
+author = {Zeruvabel, Evitar},
+title = {{Social Mindscapes: An Invitation to Cognitive Sociology}},
+year = {1997}
 }
 
-@book{Lareau:2003tr,
-author = {Lareau, Annette},
-title = {{Unequal Childhoods}},
-publisher = {Univ of California Press},
-year = {2003},
-series = {Class, Race, and Family Life},
-month = sep
-}
-
-@article{Bryson:1996ky,
-author = {Bryson, Bethany},
-title = {{Anything But Heavy Metal": Symbolic Exclusion and Musical Dislikes}},
-journal = {American Sociological Review},
-year = {1996},
-volume = {61},
-number = {5},
-pages = {884--899}
-}
-
-@book{Becker:2008wp,
-author = {Becker, Howard S},
-title = {{Art Worlds: 25th Anniversary edition, Updated and Expanded}},
-publisher = {University of California Press},
-year = {2008},
-edition = {2}
-}
-
-@inproceedings{Mische:2009kz,
-author = {Mische, Ann},
-title = {{Projects and possibilities: researching futures in action}},
-booktitle = {Sociological Forum},
-year = {2009},
-pages = {694--704},
-organization = {Wiley Online Library}
-}
-
-@article{Johnston:2007bh,
-author = {Johnston, Josee and Baumann, Shyon},
-title = {{Democracy versus Distinction: A Study of Omnivorousness in Gourmet Food Writing}},
-journal = {American Journal of Sociology},
-year = {2007},
-volume = {113},
-number = {1},
-pages = {165--204},
-month = jul
-}
-
-@article{Griswold:1987vx,
-author = {Griswold, W.},
-title = {{The fabrication of meaning: Literary interpretation in the United States, Great Britain, and the West Indies}},
-journal = {AJS},
-year = {1987},
-pages = {1077--1117}
-}
-
-@article{Rossman:2010kw,
-author = {Rossman, G and Esparza, N and Bonacich, P},
-title = {{I'd Like to Thank the Academy, Team Spillovers, and Network Centrality}},
-journal = {American Sociological Review},
+@article{Martin:2010bs,
+author = {Martin, John Levi},
+title = {{Life's a beach but you're an ant, and other unwelcome news for the sociology of culture}},
+journal = {Poetics},
 year = {2010},
-volume = {75},
-number = {1},
-pages = {31--51},
-month = mar
+volume = {38},
+number = {2},
+pages = {229--244}
 }
 
-@book{Wherry:2012wo,
-author = {Wherry, Frederick},
-title = {{The Culture of Markets}},
-publisher = {Polity},
-year = {2012},
-edition = {1},
-month = jan
-}
-
-@book{Peterson:1997te,
-author = {Peterson, Richard A},
-title = {{Creating Country Music}},
-publisher = {University Of Chicago Press},
-year = {1997},
-series = {Fabricating Authenticity},
-month = nov
-}
-
-@incollection{Lizardo:2008wl,
-author = {Lizardo, Omar},
-title = {{Culture and Stratification}},
-booktitle = {Handbook of Cultural Sociology},
-year = {2008},
-editor = {Grindstaff, Laura and Lo, Ming-Cheng},
-pages = {305--315},
-publisher = {Routledge},
-address = {London}
-}
-
-@article{Eliasoph:2003wa,
-author = {Eliasoph, Nina and Lichterman, Paul},
-title = {{Culture in interaction}},
-journal = {American Journal of Sociology},
-year = {2003},
-volume = {108},
-number = {4},
-pages = {735--794}
+@article{Cerulo:2010es,
+author = {Cerulo, Karen A.},
+title = {{Mining the intersections of cognitive sociology and neuroscience}},
+journal = {Poetics},
+year = {2010},
+volume = {38},
+number = {2},
+pages = {115--132}
 }
 
